package main.View.gestionDeProcesoPropuesta;

public class VistaFormularioRegistroRecaudos {
    
}
