package main.View.gestionDeProcesoPropuesta;

public class VistaFormularioCargaCurso {
    
}
